2004-02-08  Christopher Faylor  <cgf@redhat.com>

	* debug.h (console_printf): Define for non-debugging condition.

	* cygtls.h (_threadinfo::lock): Remove wait argument.
	(_threadinfo::interrupt_setup): Remove retaddr argument.
	* exceptions.cc (_threadinfo::interrupt_setup): Ditto.
	(_threadinfo::interrupt_now): Accommodate change to interrupt_setup
	argument.
	(setup_handler): Ditto.  Always lock sig stack prior to determining
	interrupt method.
	* gendef (_sigfe): Correct thinko regarding cmpxchg.
	(_sigbe): Ditto.
	(_threadinfo::lock): Ditto.
	(_threadinfo::pop): Eliminate left-over stack unlock.
	* sigproc.cc (proc_subproc): Chnage debugging output to printed
	warning.

2004-02-08  Christopher Faylor  <cgf@redhat.com>

	* localtime.cc (localtime_r): Call tzset.

	* Makefile.in: Make version.h/cygwin.din version check a warning since
	it is not foolproof.

	* cygheap.h (CYGHEAPSIZE): Bump size down.

	* cygtls.h (_threadinfo::stacklock): New element.
	(_threadinfo::pop): Make regparm.
	(_threadinfo::lock): New function.
	(_threadinfo::unlock): New function.
	* cygtls.cc (_threadinfo::push): Wait for a lock on the stack before
	performing the operation.
	(_threadinfo::pop): Move to another file.
	* cygwin.din: More SIGFE changes.
	* exceptions.cc (try_to_debug): Always display messages on console.
	(handle_exceptions): Unwind stack only when actually about to call
	sig_send.
	(setup_handler): Lock stack prior to performing any operations.
	* gendef (_sigfe): Ditto.
	(_sigbe): Ditto.
	(_threadinfo::pop): Ditto.  Move here.
	* gen_tlsoffsets: Generate positive offsets.
	* tlsoffsets.h: Regenerate.

2004-02-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.h (CYGWIN_SERVER_VERSION_API): Bump.
	* cygserver_ipc.h (struct proc): Add signal_arrived member.
	(ipc_set_proc_info): Inititalize blk.signal_arrived.

2004-02-06  Pierre Humblet <pierre.humblet@ieee.org>

	* uinfo.cc (cygheap_user::init): Use sec_user_nih to build a